fixed mobile parallaxing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -314,4 +314,13 @@ header {
     right: 100px;
     top: 50px;
   }
+
+  .landing-page {
+    background: url(../img/background.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+  }
 }
